--- a/public/index.html
+++ b/public/index.html
@@ -41,5 +41,9 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <script src="assets/js/vendors/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/vendors/jquery-3.6.0.min.js"></script>
+    <script src="assets/js/vendors/wow.js"></script>
+    <script src="assets/js/vendors/jquery.progressScroll.min.js"></script>
+    <script src="assets/js/main.js?v=2.0"></script>
   </body>
 </html>
