增加 login, register page.

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="羽球密碼"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link href="assets/css/style.css?v=2.0" rel="stylesheet">
+    <link href="/assets/css/style.css?v=2.0" rel="stylesheet">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -26,6 +26,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>羽球密碼</title>
+    <script>function info(value) {console.info(value)}</script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -40,10 +41,10 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script src="assets/js/vendors/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/vendors/jquery-3.6.0.min.js"></script>
-    <script src="assets/js/vendors/wow.js"></script>
-    <script src="assets/js/vendors/jquery.progressScroll.min.js"></script>
-    <script src="assets/js/main.js?v=2.0"></script>
+    <script src="/assets/js/vendors/bootstrap.bundle.min.js"></script>
+    <script src="/assets/js/vendors/jquery-3.6.0.min.js"></script>
+    <script src="/assets/js/vendors/wow.js"></script>
+    <script src="/assets/js/vendors/jquery.progressScroll.min.js"></script>
+    <script src="/assets/js/main.js?v=2.0"></script>
   </body>
 </html>
